// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'Games' page layout > at a narrow window (390px) 1`] = `
"viewport 390px
div [flex-wrap]
  div [max-w-xs]
  div [flex-wrap]
div [flex-wrap]
  h2 "Modern Warfare IV"
  div [flex-wrap]
div#tweak-rows [grid-cols-1]
  div#tweak-row
    div [flex-wrap]
      span#setting-value-state [max-w-56]
    div [flex-wrap]
  div#tweak-row
    div [flex-wrap]
      span#setting-value-state [max-w-56]
    div [flex-wrap]"
`;

exports[`'Games' page layout > at a wide window (2560px) 1`] = `
"viewport 2560px
div [flex-wrap]
  div [max-w-xs]
  div [flex-wrap]
div [flex-wrap]
  h2 "Modern Warfare IV"
  div [flex-wrap]
div#tweak-rows [grid-cols-3]
  div#tweak-row
    div [flex-wrap]
      span#setting-value-state [max-w-56]
    div [flex-wrap]
  div#tweak-row
    div [flex-wrap]
      span#setting-value-state [max-w-56]
    div [flex-wrap]"
`;

exports[`'Hardware' page layout > at a narrow window (390px) 1`] = `
"viewport 390px
h3 "Hardware"
div#hardware-columns [grid-cols-1]
  div [flex-wrap]
    h3 "Example CPU 8-Core"
  div [flex-wrap]
    h3 "Memory"
  div [flex-wrap]
    h3 "Example GPU"
  div [flex-wrap]
    h3 "Example Monitor"
  div [flex-wrap]
    h3 "Ethernet"
  div [flex-wrap]
    h3 "Audio"
  h4 "Audio Output(1)"
  h4 "Audio Input""
`;

exports[`'Hardware' page layout > at a wide window (2560px) 1`] = `
"viewport 2560px
h3 "Hardware"
div#hardware-columns [grid-cols-2]
  div [flex-wrap]
    h3 "Example CPU 8-Core"
  div [flex-wrap]
    h3 "Memory"
  div [flex-wrap]
    h3 "Example GPU"
  div [flex-wrap]
    h3 "Example Monitor"
  div [flex-wrap]
    h3 "Ethernet"
  div [flex-wrap]
    h3 "Audio"
  h4 "Audio Output(1)"
  h4 "Audio Input""
`;

exports[`'History' page layout > at a narrow window (390px) 1`] = `
"viewport 390px
div [flex-wrap]
  h2 "What fpstune changed"
div [flex-wrap]
  h3 "Still changed by fpstune (1)"
  div [flex-wrap]
li [flex-wrap]
h3 "Already put back (1)"
li [flex-wrap]"
`;

exports[`'History' page layout > at a wide window (2560px) 1`] = `
"viewport 2560px
div [flex-wrap]
  h2 "What fpstune changed"
div [flex-wrap]
  h3 "Still changed by fpstune (1)"
  div [flex-wrap]
li [flex-wrap]
h3 "Already put back (1)"
li [flex-wrap]"
`;

exports[`'Home' page layout > at a narrow window (390px) 1`] = `
"viewport 390px
section [flex-wrap]
div [flex-wrap]
section#home-advisories
  h2 "Needs your attention"
  span [hidden]
  div#home-advisory-grid [grid-cols-1]
    div [flex-wrap]
    div#advisory-finding
      span#setting-value-state
    p#advisory-advice
    div [flex-wrap]
    div#advisory-finding
      span#setting-value-state
    p#advisory-advice
section#home-measured
  h2 "What fpstune changed, measured"
  span [hidden]
section [flex-col]
  h2 "Hardware tweaks"
  span [hidden]
section [flex-col]
  h2 "Software tweaks"
  span [hidden]
  div [flex-wrap]
  div#tweak-group-rows [grid-cols-1]
    div#tweak-list-row
      div [flex-wrap]
      div [flex-wrap]
        span#setting-value-state
    div#tweak-list-row
      div [flex-wrap]
      div [flex-wrap]
        span#setting-value-state
section [flex-col]
  h2 "Game tweaks"
  span [hidden]
section [flex-col]
  h2 "Available disk cleanup actions"
  span#home-cleanup-count
  div#home-cleanup-rows [grid-cols-1]
    div [flex-wrap]
    div [flex-wrap]
h3 "Hardware"
div#hardware-columns [grid-cols-1]
  div [flex-wrap]
    h3 "Example CPU 8-Core"
  div [flex-wrap]
    h3 "Memory"
  div [flex-wrap]
    h3 "Example GPU"
  div [flex-wrap]
    h3 "Example Monitor"
  div [flex-wrap]
    h3 "Ethernet"
  div [flex-wrap]
    h3 "Audio"
  h4 "Audio Output(1)"
  h4 "Audio Input""
`;

exports[`'Home' page layout > at a wide window (2560px) 1`] = `
"viewport 2560px
section [flex-wrap]
div [flex-wrap]
section#home-advisories
  h2 "Needs your attention"
  div#home-advisory-grid [grid-cols-3]
    div [flex-wrap]
    div#advisory-finding
      span#setting-value-state
    p#advisory-advice
    div [flex-wrap]
    div#advisory-finding
      span#setting-value-state
    p#advisory-advice
section#home-measured
  h2 "What fpstune changed, measured"
div [grid-cols-[2fr_1fr]]
  section [flex-col]
    h2 "Hardware tweaks"
  section [flex-col]
    h2 "Software tweaks"
    div [flex-wrap]
    div#tweak-group-rows [grid-cols-2]
      div#tweak-list-row
        div [flex-wrap]
        div [flex-wrap]
          span#setting-value-state
      div#tweak-list-row
        div [flex-wrap]
        div [flex-wrap]
          span#setting-value-state
  section [flex-col]
    h2 "Game tweaks"
  section [flex-col]
    h2 "Available disk cleanup actions"
    span#home-cleanup-count
    div#home-cleanup-rows [grid-cols-1]
      div [flex-wrap]
      div [flex-wrap]
h3 "Hardware"
div#hardware-columns [grid-cols-2]
  div [flex-wrap]
    h3 "Example CPU 8-Core"
  div [flex-wrap]
    h3 "Memory"
  div [flex-wrap]
    h3 "Example GPU"
  div [flex-wrap]
    h3 "Example Monitor"
  div [flex-wrap]
    h3 "Ethernet"
  div [flex-wrap]
    h3 "Audio"
  h4 "Audio Output(1)"
  h4 "Audio Input""
`;

exports[`'Software' page layout > at a narrow window (390px) 1`] = `
"viewport 390px
div [flex-wrap]
  div [max-w-xs]
  div [flex-wrap]
div[group] [flex-wrap]
div [flex-wrap]
  h2 "System"
  div [flex-wrap]
div#tweak-rows [grid-cols-1]
  div#tweak-row
    div [flex-wrap]
      span#setting-value-state [max-w-56]
    div [flex-wrap]
  div#tweak-row
    div [flex-wrap]
      span#setting-value-state [max-w-56]
    div [flex-wrap]"
`;

exports[`'Software' page layout > at a wide window (2560px) 1`] = `
"viewport 2560px
div [flex-wrap]
  div [max-w-xs]
  div [flex-wrap]
div[group] [flex-wrap]
div [flex-wrap]
  h2 "System"
  div [flex-wrap]
div#tweak-rows [grid-cols-3]
  div#tweak-row
    div [flex-wrap]
      span#setting-value-state [max-w-56]
    div [flex-wrap]
  div#tweak-row
    div [flex-wrap]
      span#setting-value-state [max-w-56]
    div [flex-wrap]"
`;
